// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test car data retrieval should get 2 cars from db 1`] = `
Object {
  "data": Array [
    Object {
      "company_id": null,
      "dkn": "CA4918KM",
      "id": 4601,
      "mark_name": "Volkswagen",
      "model_name": "Passat",
      "person_id": null,
      "produce_year": "1992",
      "rama": "YGHJHKLLOLIHGHG",
    },
    Object {
      "company_id": null,
      "dkn": "CA7474KA",
      "id": 4602,
      "mark_name": "Audi",
      "model_name": "A8",
      "person_id": null,
      "produce_year": "2008",
      "rama": "WVWEZZZ1HZRW206119",
    },
  ],
  "total": 1376287,
}
`;

exports[`Test car data retrieval should get a car from db 1`] = `
Object {
  "data": Object {
    "company_id": null,
    "dkn": "CA4918KM",
    "id": 4601,
    "mark_name": "Volkswagen",
    "model_name": "Passat",
    "person_id": null,
    "produce_year": "1992",
    "rama": "YGHJHKLLOLIHGHG",
  },
}
`;

exports[`Test car data retrieval should get cars from db with filter 1`] = `
Object {
  "data": Array [
    Object {
      "company_id": 1753520,
      "dkn": "СА5375ХМ",
      "id": 1490009,
      "mark_name": "Volkswagen",
      "model_name": "Golf",
      "person_id": 1753520,
      "produce_year": "1994",
      "rama": "WVWZZZ1HZRW464701",
    },
    Object {
      "company_id": 1556492,
      "dkn": "СА8652ХВ",
      "id": 2134851,
      "mark_name": "Volkswagen",
      "model_name": "Golf",
      "person_id": 1556492,
      "produce_year": "2002",
      "rama": "WVWZZZ1JZ1B173308",
    },
    Object {
      "company_id": 1468442,
      "dkn": "СА2525ВК",
      "id": 2143856,
      "mark_name": "Toyota",
      "model_name": "RAV-4",
      "person_id": 1468442,
      "produce_year": "2004",
      "rama": "JTEHG20V306040443",
    },
    Object {
      "company_id": 1552797,
      "dkn": "СА8346ХВ",
      "id": 2168514,
      "mark_name": "Audi",
      "model_name": "A8",
      "person_id": 1552797,
      "produce_year": "2004",
      "rama": "WAUZZZ4E94N020180",
    },
    Object {
      "company_id": 112645,
      "dkn": "СА8393ХВ",
      "id": 2169761,
      "mark_name": "Audi",
      "model_name": "A6",
      "person_id": 112645,
      "produce_year": "2000",
      "rama": "WAUZZZ4BZYN098915",
    },
    Object {
      "company_id": 264536,
      "dkn": "СА1309А",
      "id": 2189941,
      "mark_name": "0",
      "model_name": "Друг ...",
      "person_id": 264536,
      "produce_year": "2001",
      "rama": "JYARP041000004589",
    },
    Object {
      "company_id": 1582154,
      "dkn": "СА0218ХН",
      "id": 2312244,
      "mark_name": "Volkswagen",
      "model_name": "Caddy",
      "person_id": 1582154,
      "produce_year": "2007",
      "rama": "WV2ZZZ2KZ8X059506",
    },
    Object {
      "company_id": 92082,
      "dkn": "СА7568ХН",
      "id": 2357383,
      "mark_name": "Citroen",
      "model_name": "Друг ...",
      "person_id": 92082,
      "produce_year": "2005",
      "rama": "VF7LC9HXC74172495",
    },
    Object {
      "company_id": 1815922,
      "dkn": "СА1453ХР",
      "id": 2378536,
      "mark_name": "BMW",
      "model_name": "Друг ...",
      "person_id": 1815922,
      "produce_year": "1991",
      "rama": "WBACA31030EG37316",
    },
    Object {
      "company_id": 1518384,
      "dkn": "СА5376ХР",
      "id": 2401528,
      "mark_name": "Seat",
      "model_name": "Ibiza",
      "person_id": 1518384,
      "produce_year": "1995",
      "rama": "VSSZZZ6KZZR737515",
    },
  ],
  "total": 18,
}
`;

exports[`Test car data retrieval should get cars from db with pagination 1`] = `
Object {
  "data": Array [
    Object {
      "company_id": null,
      "dkn": "CA4918KM",
      "id": 4601,
      "mark_name": "Volkswagen",
      "model_name": "Passat",
      "person_id": null,
      "produce_year": "1992",
      "rama": "YGHJHKLLOLIHGHG",
    },
    Object {
      "company_id": null,
      "dkn": "CA7474KA",
      "id": 4602,
      "mark_name": "Audi",
      "model_name": "A8",
      "person_id": null,
      "produce_year": "2008",
      "rama": "WVWEZZZ1HZRW206119",
    },
  ],
  "total": 1376287,
}
`;

exports[`Test car data retrieval should get cars from db with sorting 1`] = `
Object {
  "data": Array [
    Object {
      "company_id": null,
      "dkn": "CA4918KM",
      "id": 4601,
      "mark_name": "Volkswagen",
      "model_name": "Passat",
      "person_id": null,
      "produce_year": "1992",
      "rama": "YGHJHKLLOLIHGHG",
    },
    Object {
      "company_id": null,
      "dkn": "CA7474KA",
      "id": 4602,
      "mark_name": "Audi",
      "model_name": "A8",
      "person_id": null,
      "produce_year": "2008",
      "rama": "WVWEZZZ1HZRW206119",
    },
  ],
  "total": 1376287,
}
`;
